add redis config to compose file

--- a/todo-app/todo-backend/.env
+++ b/todo-app/todo-backend/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb://the_username:the_password@localhost:3009/todo_backend_db
+MONGO_URL=mongodb://the_username:the_password@localhost:27017/todo_backend_db
+REDIS_URL=redis://localhost:6379
