--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
   mongodb:
     image: mongo
     ports:
-      - 3009:27017
+      - 27017:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=secret
@@ -12,6 +12,11 @@ services:
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_data:/data/db
+  redisdb:
+    image: redis
+    ports:
+      - 6379:6379
+    
 
 volumes:
   mongo_data:
