--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -16,7 +16,11 @@ services:
     image: redis
     ports:
       - 6379:6379
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
+      - ./redis_data:/data
     
 
 volumes:
   mongo_data:
+  redis_data:
