todo-frontend: fix dockerfile, run todo-frontend container with backend

--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:19-alpine
 
 WORKDIR /app
+RUN mkdir ./build
 
-COPY --chown=node:node . .
+COPY . .
+# COPY --chown=node:node . .
 
-USER node
+# USER node
 
 ENV REACT_APP_BACKEND_URL=http://localhost:3003
 
