--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,15 +1,21 @@
-FROM node:19-alpine
-
+FROM node:19-alpine AS base
 WORKDIR /app
-RUN mkdir ./build
-
-COPY . .
-# COPY --chown=node:node . .
-
-# USER node
+# RUN mkdir ./build
+COPY ./package.json ./package.json
+COPY ./package-lock.json ./package-lock.json
 
 ENV REACT_APP_BACKEND_URL=http://localhost:3003
+# COPY . .
+# COPY --chown=node:node . .
+# USER node
 
+FROM base AS test
+RUN npm ci
+COPY . .
+ENV CI=true
+CMD ["npm", "run", "test"]
+
+FROM test AS build
 RUN npm ci --only=production
-
-RUN npm run build
+COPY . .
+CMD ["npm", "run", "build"]
