todo-frontend: add multi-stage building to dockerfile, testing during build process

--- a/todo-app/todo-frontend/Dockerfile
+++ b/todo-app/todo-frontend/Dockerfile
@@ -1,11 +1,7 @@
 FROM node:19-alpine AS base
 WORKDIR /app
-# RUN mkdir ./build
-COPY ./package.json ./package.json
-COPY ./package-lock.json ./package-lock.json
-
+COPY ["package*.json", "package*.json", "./"]
 ENV REACT_APP_BACKEND_URL=http://localhost:3003
-# COPY . .
 # COPY --chown=node:node . .
 # USER node
 
@@ -13,9 +9,11 @@ FROM base AS test
 RUN npm ci
 COPY . .
 ENV CI=true
-CMD ["npm", "run", "test"]
+RUN npm run test
 
 FROM test AS build
 RUN npm ci --only=production
-COPY . .
-CMD ["npm", "run", "build"]
+RUN npm run build
+
+FROM nginx:1.20-alpine
+COPY --from=build /app/build /usr/share/nginx/html
