todo-backend: set up container dev env, add dev.Dockerfile & compose.dev.yml, currently can't access container services from the outside

--- a/todo-app/todo-backend/compose.dev.yml
+++ b/todo-app/todo-backend/compose.dev.yml
@@ -19,6 +19,19 @@ services:
     command: ['redis-server', '--appendonly', 'yes']
     volumes:
       - ./redis_data:/data
+  todo-backend-dev:
+    image: fso12/todo-backend-dev
+    build:
+      context: .
+      dockerfile: dev.Dockerfile
+    ports:
+      - 3333:3003
+    container_name: todo_backend_dev
+    volumes:
+      - ./:/usr/src/app
+    env_file: .env
+  debugger-busybox:
+    image: busybox:1.36.0
     
 
 volumes:
