--- a/todo-app/todo-backend/.env
+++ b/todo-app/todo-backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://the_username:the_password@localhost:27017/todo_backend_db
-REDIS_URL=redis://localhost:6379
+MONGO_URL=mongodb://the_username:the_password@mongodb:27017/todo_backend_db
+REDIS_URL=redis://redisdb:6379
