--- a/todo-app/todo-backend/compose.dev.yml
+++ b/todo-app/todo-backend/compose.dev.yml
@@ -25,14 +25,13 @@ services:
       context: .
       dockerfile: dev.Dockerfile
     ports:
-      - 3333:3003
+      - 3003:3003
     container_name: todo_backend_dev
     volumes:
       - ./:/usr/src/app
     env_file: .env
   debugger-busybox:
-    image: busybox:1.36.0
-    
+    image: busybox
 
 volumes:
   mongo_data:
