--- a/todo-app/nginx.conf
+++ b/todo-app/nginx.conf
@@ -12,7 +12,7 @@ http {
       proxy_set_header Connection 'upgrade';
 
       # Reqs: directed/passed: localhost:3000 (frontend)
-      proxy_pass http://localhost:3000;
+      proxy_pass http://todo-frontend:3000;
     }
   }
 }
